[gd_scene load_steps=2 format=3 uid="uid://hud_debug_poc"]

[ext_resource type="Script" path="res://scripts/ui/hud_debug.gd" id="1"]

[node name="HUD_Debug" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Root"]
offset_left = 16.0
offset_top = 16.0
offset_right = 360.0
offset_bottom = 220.0

[node name="FPS" type="Label" parent="Root/VBox"]
text = "FPS: -"

[node name="PlayerHP" type="Label" parent="Root/VBox"]
text = "Player HP: -"

[node name="DashCD" type="Label" parent="Root/VBox"]
text = "Dash CD: -"

[node name="SceneName" type="Label" parent="Root/VBox"]
text = "Scene: -"

[node name="RunTimer" type="Label" parent="Root/VBox"]
text = "Run: -"
